--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,24 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase-messaging.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDOP6MeTZ3cjUC2DMO6Ib6qURQbKHL1Lh0",
+      authDomain: "nospoilerapp.firebaseapp.com",
+      databaseURL: "https://nospoilerapp.firebaseio.com",
+      projectId: "nospoilerapp",
+      storageBucket: "",
+      messagingSenderId: "546535503474"
+    };
+    firebase.initializeApp(config);
+  </script>
+
 </head>
 <body>
 
